--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     },
     "dependencies": {
         "discord.js": "^12.5.1",
-        "dotenv": "^8.2.0",
+        "dotenv": "8.0.0",
         "node": "^15.10.0",
         "ts-node": "^9.1.1"
     }
