--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node,visualstudiocode,yarn
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,visualstudiocode,yarn
 
+.vscode
+.github
+
 ## contracts ##
 contract/target/
 
