--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -1,22 +1,21 @@
 [package]
 name = "plasm_faucet"
-version = "3.0.0-rc2"
+version = "3.0.0-rc3"
 authors = ["Kentaro Vadney <kentaro@stake.co.jp>"]
 edition = "2018"
 
 [dependencies]
-ink_primitives = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }
-ink_metadata = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
-ink_env = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }
-ink_storage = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }
-ink_lang = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }
+cargo-contract = "^0.9.1"
+ink_primitives = { version = "^3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
+ink_metadata = { version = "^3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
+ink_env = { version = "^3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
+ink_storage = { version = "^3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
+ink_lang = { version = "^3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
+ink_prelude = { version = "3.0.0-rc3", default-features = false }
 
-scale = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive"] }
+scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
 scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }
 
-# Should be removed once bitvecto-rs/bitvec#105 is resolved
-funty = "=1.1.0"
-ink_prelude = { version = "3.0.0-rc2", default-features = false }
 
 [lib]
 name = "plasm_faucet"
@@ -37,4 +36,3 @@ std = [
     "scale-info/std",
 ]
 ink-as-dependency = []
-ink-experimental-engine = ["ink_env/ink-experimental-engine"]
