--- a/app/package.json
+++ b/app/package.json
@@ -25,7 +25,7 @@
     "main": "build/index.js",
     "scripts": {
         "start": "yarn run serve",
-        "serve": "cd build && yarn run build && NODE_ENV=production node -r dotenv/config ./build/index.js",
+        "serve": "cd build && yarn run build && NODE_ENV=production node -r dotenv/config ./index.js",
         "dev": "ts-node-dev -r dotenv/config src/index.ts",
         "build": "tsc --project tsconfig.json",
         "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
@@ -63,6 +63,7 @@
         "@polkadot/util-crypto": "^6.6.1",
         "discord.js": "^12.5.1",
         "dotenv": "^8.0.0",
-        "ts-node": "^9.1.1"
+        "ts-node": "^9.1.1",
+        "trim-newlines@^3.0.1": "^3.0.1"
     }
 }
