--- a/app/package.json
+++ b/app/package.json
@@ -55,7 +55,7 @@
         "typescript": "^4.2.3"
     },
     "dependencies": {
-        "@plasm/types": "^4.12.1",
+        "@plasm/types": "1.5.4-2",
         "@polkadot/api": "^4.12.1",
         "@polkadot/api-contract": "^4.12.1",
         "@polkadot/types": "^4.12.1",
@@ -64,6 +64,6 @@
         "discord.js": "^12.5.1",
         "dotenv": "^8.0.0",
         "ts-node": "^9.1.1",
-        "trim-newlines@^3.0.1": "^3.0.1"
+        "trim-newlines@^3.0.1": "^4.0.1"
     }
 }
