--- a/app/package.json
+++ b/app/package.json
@@ -52,7 +52,8 @@
         "prettier": "^2.2.1",
         "ts-jest": "^26.5.4",
         "ts-node-dev": "^1.1.6",
-        "typescript": "^4.2.3"
+        "typescript": "^4.2.3",
+        "ts-node": "^9.1.1"
     },
     "dependencies": {
         "@plasm/types": "1.5.4-2",
@@ -63,7 +64,6 @@
         "@polkadot/util-crypto": "^6.6.1",
         "discord.js": "^12.5.1",
         "dotenv": "^8.0.0",
-        "ts-node": "^9.1.1",
         "trim-newlines@^3.0.1": "^4.0.1"
     }
 }
