--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -14,7 +14,7 @@ ink_prelude = { version = "3.0.0-rc3", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
 scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }
-
+chrono = "0.4.19"
 
 [lib]
 name = "plasm_faucet"
