--- a/app/package.json
+++ b/app/package.json
@@ -57,7 +57,7 @@
     "dependencies": {
         "discord.js": "^12.5.1",
         "@polkadot/api": "^4.12.1",
-        "@plasm/types": "1.5.4-2",
+        "@plasm/types": "^1.5.4-2",
         "@polkadot/api-contract": "^4.12.1",
         "@polkadot/types": "^4.12.1",
         "@polkadot/util": "^6.6.1",
