--- a/app/package.json
+++ b/app/package.json
@@ -56,13 +56,14 @@
     },
     "dependencies": {
         "discord.js": "^12.5.1",
-        "@polkadot/api": "^4.12.1",
-        "@plasm/types": "^1.5.4-2",
-        "@polkadot/api-contract": "^4.12.1",
-        "@polkadot/types": "^4.12.1",
+        "@polkadot/api": "^4.14.1",
+        "@plasm/types": "^1.5.4-3",
+        "@polkadot/api-contract": "^4.14.1",
+        "@polkadot/types": "^4.14.1",
         "@polkadot/util": "^6.6.1",
         "@polkadot/util-crypto": "^6.6.1",
         "dotenv": "^8.0.0",
-        "trim-newlines@^3.0.1": "^4.0.1"
+        "trim-newlines": "^4.0.1",
+        "@polkadot/keyring": "^6.8.1"
     }
 }
