--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -5,15 +5,15 @@ authors = ["Kentaro Vadney <kentaro@stake.co.jp>"]
 edition = "2018"
 
 [dependencies]
-ink_primitives = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
-ink_metadata = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
-ink_env = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
-ink_storage = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
-ink_lang = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
-ink_prelude = { version = "3.0.0-rc3", default-features = false }
+ink_primitives = { version="3.0.0-rc3", git="https://github.com/paritytech/ink", default-features=false }
+ink_metadata = { version="3.0.0-rc3", git="https://github.com/paritytech/ink", default-features=false, features=["derive"], optional=true }
+ink_env = { version="3.0.0-rc3", git="https://github.com/paritytech/ink", default-features=false }
+ink_storage = { version="3.0.0-rc3", git="https://github.com/paritytech/ink", default-features=false }
+ink_lang = { version="3.0.0-rc3", git="https://github.com/paritytech/ink", default-features=false }
+ink_prelude = { version="3.0.0-rc3", default-features=false }
 
-scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
-scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }
+scale = { package="parity-scale-codec", version="2.1", default-features=false, features=["derive"] }
+scale-info = { version="0.6", default-features=false, features=["derive"], optional=true }
 chrono = "0.4.19"
 
 [lib]
@@ -35,3 +35,5 @@ std = [
     "scale-info/std",
 ]
 ink-as-dependency = []
+# Enable contract debug messages via `debug_print!` and `debug_println!`.
+ink-debug = []
