--- a/app/package.json
+++ b/app/package.json
@@ -32,7 +32,8 @@
         "sandbox": "ts-node -r dotenv/config scripts/sandbox.ts"
     },
     "engines": {
-        "node": ">=16.x"
+        "node": ">=16.x",
+        "yarn": ">=1.22.10"
     },
     "license": "MIT",
     "devDependencies": {
