--- a/app/package.json
+++ b/app/package.json
@@ -28,17 +28,21 @@
         "dev": "ts-node-dev -r dotenv/config src/index.ts",
         "build": "tsc --project tsconfig.json",
         "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-        "test": "NODE_ENV=test jest --setupFiles dotenv/config --verbose --coverage && eslint '*/**/*.{js,ts,tsx}'",
+        "test": "NODE_ENV=test jest --setupFiles dotenv/config --verbose --coverage && eslint '*/**/*.{js,ts,tsx}' --experimental-vm-modules",
         "sandbox": "ts-node -r dotenv/config scripts/sandbox.ts"
     },
+    "transformIgnorePatterns": [
+        "node_modules/(?!(@polkadot|@mapbox/mapbox-gl-draw)/)"
+    ],
     "engines": {
         "node": ">=16.x",
         "yarn": ">=1.22.10"
     },
     "license": "MIT",
     "devDependencies": {
-        "@types/jest": "^26.0.21",
-        "@types/node": "^14.14.35",
+        "@types/jest": "^26.0.23",
+        "@types/mocha": "^8.2.2",
+        "@types/node": "^15.12.4",
         "@types/ws": "^7.4.0",
         "@typescript-eslint/eslint-plugin": "^4.18.0",
         "@typescript-eslint/parser": "^4.18.0",
@@ -46,25 +50,26 @@
         "eslint": "^7.22.0",
         "eslint-config-prettier": "^8.1.0",
         "eslint-plugin-prettier": "^3.3.1",
-        "jest": "^26.6.3",
+        "jest": "^27.0.4",
         "jest-config": "^26.6.3",
         "nock": "^13.0.11",
         "prettier": "^2.2.1",
-        "ts-jest": "^26.5.4",
+        "ts-jest": "^27.0.3",
+        "ts-node": "^9.1.1",
         "ts-node-dev": "^1.1.6",
         "typescript": "^4.2.3",
-        "ts-node": "^9.1.1"
+        "@babel/preset-env": "^7.14.5"
     },
     "dependencies": {
-        "discord.js": "^12.5.1",
-        "@polkadot/api": "^4.14.1",
         "@plasm/types": "^1.5.4-3",
+        "@polkadot/api": "^4.14.1",
         "@polkadot/api-contract": "^4.14.1",
+        "@polkadot/keyring": "^6.8.1",
         "@polkadot/types": "^4.14.1",
         "@polkadot/util": "^6.6.1",
         "@polkadot/util-crypto": "^6.6.1",
+        "discord.js": "^12.5.1",
         "dotenv": "^8.0.0",
-        "trim-newlines": "^4.0.1",
-        "@polkadot/keyring": "^6.8.1"
+        "trim-newlines": "^4.0.1"
     }
 }
