--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -3,9 +3,7 @@
         "module": "commonjs",
         "esModuleInterop": true,
         "target": "es2015",
-        "lib": [
-            "es6"
-        ],
+        "lib": ["es6"],
         "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "build",
@@ -16,22 +14,14 @@
         "experimentalDecorators": true,
         // we set this to false because of TypeORM entity decorators
         "strictPropertyInitialization": false,
-        "removeComments": true
+        "removeComments": true,
+        "types": ["jest", "node"],
+        "typeRoots": ["./types", "./node_modules/@types"]
     },
     "ts-node": {
-        "transpile-only": true,
+        "transpile-only": true
     },
-    "lib": [
-        "es2015"
-    ],
-    "include": [
-        "src/**/*"
-    ],
-    "exclude": [
-        "node_modules",
-        "build",
-        "dist",
-        "scripts",
-        "tests"
-    ]
+    "lib": ["es2015"],
+    "include": ["src/**/*", "tests"],
+    "exclude": ["node_modules", "build", "dist", "scripts"]
 }
