--- a/app/package.json
+++ b/app/package.json
@@ -28,7 +28,7 @@
         "dev": "ts-node-dev -r dotenv/config src/index.ts",
         "build": "tsc --project tsconfig.json",
         "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-        "test": "NODE_ENV=test jest --setupFiles dotenv/config --verbose --coverage && eslint '*/**/*.{js,ts,tsx}' --experimental-vm-modules",
+        "test": "jest",
         "sandbox": "ts-node -r dotenv/config scripts/sandbox.ts"
     },
     "transformIgnorePatterns": [
