--- a/app/package.json
+++ b/app/package.json
@@ -31,22 +31,16 @@
         "test": "jest --env=jsdom --setupFiles dotenv/config --verbose --coverage && eslint '*/**/*.{js,ts,tsx}'",
         "sandbox": "ts-node -r dotenv/config scripts/sandbox.ts"
     },
-    "transformIgnorePatterns": [
-        "node_modules/(?!(@polkadot|@mapbox/mapbox-gl-draw)/)"
-    ],
     "engines": {
         "node": ">=16.x",
         "yarn": ">=1.22.10"
     },
     "license": "MIT",
     "devDependencies": {
+        "@jest/types": "^27.0.2",
         "@types/jest": "^26.0.23",
-        "@types/mocha": "^8.2.2",
-        "@types/node": "^15.12.4",
-        "@types/ws": "^7.4.0",
         "@typescript-eslint/eslint-plugin": "^4.18.0",
         "@typescript-eslint/parser": "^4.18.0",
-        "dotenv-webpack": "^7.0.3",
         "eslint": "^7.22.0",
         "eslint-config-prettier": "^8.1.0",
         "eslint-plugin-prettier": "^3.3.1",
@@ -57,8 +51,7 @@
         "ts-jest": "^27.0.3",
         "ts-node": "^9.1.1",
         "ts-node-dev": "^1.1.6",
-        "typescript": "^4.2.3",
-        "@babel/preset-env": "^7.14.5"
+        "typescript": "^4.2.3"
     },
     "dependencies": {
         "@plasm/types": "^1.5.4-3",
