--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -3,7 +3,7 @@
         "module": "esnext",
         "esModuleInterop": true,
         "target": "esnext",
-        "lib": ["esnext"],
+        "lib": ["esnext", "es6"],
         "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "build",
@@ -16,10 +16,7 @@
         "strictPropertyInitialization": false,
         "removeComments": true
     },
-    "ts-node": {
-        "transpile-only": true
-    },
     "lib": ["esnext"],
     "include": ["src/**/*"],
-    "exclude": ["node_modules", "build", "dist", "scripts", "tests"]
+    "exclude": ["node_modules", "build", "dist", "scripts"]
 }
